--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,10 @@
 <div class="hero-unit">
-	<h1>Welcome to Rishi's Site!</h1>
+	<h1>Companies Galore</h1> 
 
 	<p>
-		You found the home page for 
-		<%= link_to "Rishi's Site", "http://tapsthink.in" %>
+	Helping Rishi manage all his deals 
 	</p>
 	<p>
-		<%= link_to "Sign up now!", "#", class:"btn btn-primary btn-medium" %>
+		<%= link_to "Sign up now!", "#", class:"btn btn-success btn-medium" %>
 	<p>
 </div>
