--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,7 @@
 	      </a>
 	 
 	      <!-- Be sure to leave the brand out there if you want it shown -->
-	      <a class="brand" href="#">Companies Galore</a>
+	      <%= link_to "Companies Galore", root_path, class: "brand" %>
 	 
 	      <!-- Everything you want hidden at 940px or less, place within here -->
 	      <div class="nav-collapse collapse">
@@ -21,7 +21,13 @@
 	        <!-- .nav, .navbar-search, .navbar-form, etc -->
 	      	</ul>
 	      	<ul class="nav pull-right">
-	      	<li><%= link_to "Login","#" %></li>
+	      		<% if user_signed_in? %>
+	      			<li><%= link_to "Edit Profile",edit_user_registration_path %></li>
+	      			<li><%= link_to "Logout",destroy_user_session_path, method: :delete %></li>
+      			<% else %>
+      				<li><%= link_to "Login",new_user_session_path %></li>
+    				<% end %>
+	      	
 	        <!-- .nav, .navbar-search, .navbar-form, etc -->
 	      	</ul>
 	      </div>
