--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,11 @@
 		<%= render 'layouts/header' %>
   		
   		<div class="container">
-		<%= yield %>
-
-		<%= render 'layouts/footer' %>
-	</div>
+				<% flash.each do |name, msg| %>
+					<%= content_tag(:div, msg, class: "alert alert-#{name}") %>
+				<% end %>
+				<%= yield %>
+				<%= render 'layouts/footer' %>
+			</div>
 	</body>
 </html>
