--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,8 @@
+<% if user_signed_in? %>
+	<div class="hero-unit">
+	<h1>You're Logged In</h1> 
+<% else %>
+
 <div class="hero-unit">
 	<h1>Companies Galore</h1> 
 
@@ -5,6 +10,7 @@
 	Helping Rishi manage all his deals 
 	</p>
 	<p>
-		<%= link_to "Sign up now!", "#", class:"btn btn-success btn-medium" %>
+		<%= link_to "Sign up now!",new_user_registration_path, class:"btn btn-success btn-medium" %>
 	<p>
 </div>
+<% end %>
